@@ -1,8 +1,6 @@
 #
 # File:		Makefile for openMSX catapult
 
-VERSION:=\"0.0.1CVS\"
-
 CXX:=$(shell wx-config --cxx)
 SED:=sed
 
@@ -46,7 +44,6 @@ BITMAPS:=$(addprefix $(BUILD_BASE)/,$(wildcard $(BITMAPSDIR)/*.bmp))
 
 CXXFLAGS:=-c -g
 CXXFLAGS+=$(shell xml2-config --cflags) $(shell wx-config --cxxflags)
-CXXFLAGS+=-DVERSION=$(VERSION)
 
 # implementation
 
