@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.5 2004/02/06 21:32:04 manuelbi Exp $
+$Id: ChangeLog,v 1.6 2004/02/06 21:47:50 h_oudejans Exp $
 
 2004-02-06 Manuel Bilderbeek <manuel@msxnet.org>
 	* added version variable in Makefile (maybe add config.h?)
@@ -10,6 +10,7 @@ $Id: ChangeLog,v 1.5 2004/02/06 21:32:04 manuelbi Exp $
 	* added program icon
 	* removed unicode from xml parser
 	* replaced diskimage.bmp
+	* moved version number to config.h
 
 2004-02-05 Wouter Vermaelen <wouter.vermaelen@pi.be>
 	* handle unknown XML tags better
